--- a/src/components/GoodsReceivedNote.css
+++ b/src/components/GoodsReceivedNote.css
@@ -129,10 +129,7 @@ tr:last-child td {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: -2rem -2rem 2rem -2rem;
-    /* Stretch full width */
-    flex-wrap: wrap;
-    /* responsive header */
+    margin-bottom: 2rem;
     gap: 1rem;
 }
 
